[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aichildedu"
version = "0.1.0"
description = "AI children's education platform"
authors = [
    {name = "AICHILDEDU Team", email = "contact@aichildedu.xyz"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn>=0.27.1,<0.28.0",
    "pydantic>=1.10.13,<2.0.0",
    "starlette>=0.36.3,<0.37.0",
    
    # Databases
    "sqlalchemy>=2.0.27,<2.1.0",
    "psycopg2-binary>=2.9.9,<2.10.0",
    "pymongo>=4.6.1,<4.7.0",
    "motor>=3.3.2,<3.4.0",
    "redis>=5.0.1,<5.1.0",
    "prisma>=0.10.0,<0.11.0",
    
    # Authentication and security
    "python-jose>=3.3.0,<3.4.0",
    "passlib>=1.7.4,<1.8.0",
    "python-multipart>=0.0.7,<0.1.0",
    "bcrypt>=4.0.1,<4.1.0",
    
    # AI and machine learning
    "langchain>=0.1.1,<0.2.0",
    "langchain-openai>=0.0.5,<0.1.0",
    "langchain-core>=0.1.3,<0.2.0",
    "langchain-community>=0.0.12,<0.1.0",
    "openai>=1.10.0,<1.11.0",
    "tensorflow>=2.15.0,<2.16.0",
    "torch>=2.1.2,<2.2.0",
    "transformers>=4.35.2,<4.36.0",
    "pillow>=10.1.0,<10.2.0",
    "opencv-python>=4.8.1.78,<4.9.0",
    "ffmpeg-python>=0.2.0,<0.3.0",
    
    # Tools
    "python-dotenv>=1.0.0,<1.1.0",
    "requests>=2.31.0,<2.32.0",
    "httpx>=0.25.2,<0.26.0",
    "tenacity>=8.2.3,<8.3.0",
    "bson>=0.5.10,<0.6.0",
    
    # Storage
    "minio>=7.2.0,<7.3.0",
    "boto3>=1.34.7,<1.35.0",
    
    # Search
    "elasticsearch>=8.11.1,<8.12.0",
    
    # Distributed systems
    "kafka-python>=2.0.2,<2.1.0",
    "celery>=5.3.6,<5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<7.5.0",
    "black>=23.12.1,<23.13.0",
    "isort>=5.13.2,<5.14.0",
    "mypy>=1.8.0,<1.9.0",
    "flake8>=6.1.0,<6.2.0",
    "pytest-cov>=4.1.0,<4.2.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.uv]
exclude = [
    "node_modules",
    "venv",
    ".venv",
    "env",
    ".env",
    "virtualenv",
    "site-packages",
    "dist",
    "build",
] 